github-workflow: Added 'vicharak-axon' platform
Signed-off-by: Ajit Singh <ajeetsinghchahar2@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
           - rock-5b
           - rock-5bplus
           - station-m3
+          - vicharak-axon
         CONFIGURATION: ${{ fromJSON(format('[{0}]', inputs.build-configs || '"Debug"')) }}
     steps:
       - name: Checkout
